--- a/policy-center.html
+++ b/policy-center.html
@@ -342,7 +342,7 @@
                                             <div class="multiselect">
                                                 <div class="selectBox" onclick="showCheckboxes()">
                                                     <select>
-                                                        <option>Select an option</option>
+                                                        <option>Filter By</option>
                                                     </select>
                                                     <div class="overSelect"></div>
                                                 </div>
