add user modal html

--- a/query-wiard-expressions-model.html
+++ b/query-wiard-expressions-model.html
@@ -94,7 +94,7 @@
                               <div>
                                 <!--and or btn-->
                                 <label class="switch-Not">
-                                  <input type="checkbox" id="togBtn">
+                                  <input type="checkbox" checked="true" id="togBtn">
                                   <div class="sliders-Not round">
                                     <!--ADDED HTML -->
                                     <div class="not-white-bg">NOT</div>
