all link page add new page

--- a/all-links.html
+++ b/all-links.html
@@ -75,7 +75,7 @@
                     <br />
                     <br />
                     <br />
-  
+
                   </div>
                 </div>
 
@@ -151,6 +151,12 @@
                     <p>
                       <a href="#" data-toggle="modal" data-target="#query-wizard-expression-modal">Query Wizard
                         Expressions</a>
+                    </p>
+                    <br />
+                    <br />
+                    <br />
+                    <p>
+                      <a href="#" data-toggle="modal" data-target="#query-wizard-expression-modal">Add User</a>
                     </p>
                   </div>
                 </div>
