--- a/all-links.html
+++ b/all-links.html
@@ -156,7 +156,7 @@
                     <br />
                     <br />
                     <p>
-                      <a href="#" data-toggle="modal" data-target="#query-wizard-expression-modal">Add User</a>
+                      <a href="add-user.html" target="_blank">Add User</a>
                     </p>
                   </div>
                 </div>
