close btn add wizard modal

--- a/query-wiard-expressions-model.html
+++ b/query-wiard-expressions-model.html
@@ -410,6 +410,11 @@
                   </div>
                   <div class="query-wizard-exp-contents">
                     <div class="query-wizard-expension">
+                      <button type="button" class="no-btn close-btn full-panel-close-btn" data-dismiss="modal">
+                        <span>
+                          <img src="images/modal-close.svg" />
+                        </span>
+                      </button>
                       <div class="fields-wrappter">
                         <ul class="list-ic horizontal">
                           <li>
