--- a/add-user.html
+++ b/add-user.html
@@ -80,17 +80,32 @@
               </div>
 
               <div class="adapter-modal-content-box">
-                <div class="adapter-modal-field-row">
-                  <div class="mr-3">
-                    <label class="toggle-switch-btn">
+                <div class="adapter-modal-field-row text-right">
+                  <div class="">
+
+                    <div class="query-toggle-btn-div add-user-toggle-btn">
+                      <!--and or btn-->
+                      <label class="switch-btn">
+                        <input type="checkbox" id="togBtn">
+                        <div class="sliderss round">
+                          <!--ADDED HTML -->
+                          <div class="on">Active</div>
+                          <div class="off">Inactive</div>
+                          <!--END-->
+                        </div>
+                      </label>
+                    </div>
+
+
+                    <!-- <label class="toggle-switch-btn">
                       <input type="checkbox" id="togBtn">
                       <div class="slider round">
-                        <!--ADDED HTML -->
+                        ADDED HTML
                         <span class="on-active">Active</span>
                         <span class="off-inactive">Inactive</span>
-                        <!--END-->
+                        END
                       </div>
-                    </label>
+                    </label> -->
                   </div>
 
                   <!-- <div class="">
