--- a/connectors-new.html
+++ b/connectors-new.html
@@ -470,22 +470,22 @@
                                                 <!---box css start-->
                                                 <div class="connec-box-div">
                                                     <div class="box-logo">
-                                                        <a href="#"><img src="images/nexpose_logo.png"></a>
+                                                        <a href="#"><img src="images/fortigate_logo.png"></a>
                                                     </div>
-                                                    <div class="box-title">Versioning</div>
-                                                    <div class="box-content">Keep multiple versions of an object in the
-                                                        same bucket.</div>
+                                                    <div class="box-title">Server access logging</div>
+                                                    <div class="box-content">Set up access log records that provide
+                                                        details about access requests.</div>
                                                     <div class="box-learnmore-btn"><a href="#">Learn more </a></div>
                                                     <div class="box-bottom-bar">
                                                         <div>
                                                             <label class="container-custom-checkbox">
-                                                                <input type="checkbox" checked="checked">
+                                                                <input type="checkbox">
                                                                 <span class="checkmark"></span>
                                                             </label>
 
                                                             Enable
                                                         </div>
-                                                        <div><span class="c-green"></span> (1)</div>
+                                                        <div><span class="c-orange"></span> (1)</div>
                                                     </div>
                                                 </div>
                                                 <!---box css end here-->
@@ -493,20 +493,19 @@
                                                 <!---box css start-->
                                                 <div class="connec-box-div">
                                                     <div class="box-logo">
-                                                        <a href="#"><img src="images/nexpose_logo.png"></a>
+                                                        <a href="#"><img src="images/eset_logo.png"></a>
                                                     </div>
                                                     <div class="box-title">Versioning</div>
-                                                    <div class="box-content">Keep multiple versions of an object in the
-                                                        same bucket.</div>
+                                                    <div class="box-content">Keep multiple versions of.</div>
                                                     <div class="box-learnmore-btn"><a href="#">Learn more </a></div>
                                                     <div class="box-bottom-bar">
                                                         <div>
                                                             <label class="container-custom-checkbox">
-                                                                <input type="checkbox" checked="checked">
+                                                                <input type="checkbox">
                                                                 <span class="checkmark"></span>
                                                             </label>
 
-                                                            Enable
+                                                            Disabled
                                                         </div>
                                                         <div><span class="c-green"></span> (1)</div>
                                                     </div>
@@ -570,8 +569,36 @@
 
                                     </div>
 
+                                    <br /><br />
+                                    <div class="bottom-page">
+
+                                        <ul class="pagination table-pagination">
+                                            <li class="page-item"><a class="page-link" href="#">First</a></li>
+                                            <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+                                            <li class="page-item"><a class="page-link" href="#">1</a></li>
+                                            <li class="page-item"><a class="page-link" href="#">2</a></li>
+                                            <li class="page-item"><a class="page-link" href="#">3</a></li>
+
+                                            <li class="page-item"><a class="page-link" href="#">Next</a></li>
+                                            <li class="page-item"><a class="page-link" href="#">Last</a></li>
 
 
+                                        </ul>
+
+
+                                        <div class="results-per-page">
+                                            <span class="mr-4 result-pg">Results Per Page</span>
+                                            <a href="#" class="result-number">20</a>
+
+                                            <a href="#" class="acord-arrow result-dropdown">
+                                                <img src="images/down-arrow.svg">
+                                            </a>
+
+
+
+                                        </div>
+
+                                    </div>
 
 
                                 </div>
