all link page add new page

--- a/all-links.html
+++ b/all-links.html
@@ -69,6 +69,13 @@
                     <br />
                     <br />
                     <p>
+                      <a href="connectors-new.html" target="_blank">New Connections Page
+                      </a>
+                    </p>
+                    <br />
+                    <br />
+                    <br />
+                    <p>
                       <a href="adapter-config.html" target="_blank">Adapter Config
                       </a>
                     </p>
